feat: Implement WebSocket transport for REPL server
- Added WebSocketServerTransport to handle sending and receiving messages over WebSocket connections.
- Created WebSocketSession to manage individual WebSocket connections and handle frame encoding/decoding.
- Introduced WebSocketTransportProvider to start a WebSocket server for browser-based REPL access.
- Developed integration tests for WebSocketTransportProvider to ensure proper communication and functionality.
- Added CacheControlMiddleware to manage Cache-Control headers for static and dynamic responses.
- Implemented tests for CacheControlMiddleware to verify correct header application based on request URIs.
- Added Slf4jSpanExporter for exporting spans to SLF4J at INFO level.
- Created a script to update project version across multiple files.